Fix Not Showing Datepicker

--- a/src/views/PurchaseOrder/Component/Style/PurchaseOrderCreate.css
+++ b/src/views/PurchaseOrder/Component/Style/PurchaseOrderCreate.css
@@ -69,3 +69,8 @@
 .po-required{
 	/* margin-top: 9% !important; */
 }
+
+.isDatepickerShow{
+    padding-top: 360px;
+    margin-top: -360px;
+}
